--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
     .icon {
       margin-right: 10px;
     }
+    .warning {
+      margin-top: 20px;
+      font-size: 0.9em;
+      color: #b22222;
+      line-height: 1.5;
+    }
   </style>
 </head>
 <body>
@@ -54,9 +60,13 @@
     <a href="tel:119" class="button call">
       📞 전화 걸기 (119)
     </a>
-    <a href="sms:119?body=순창군 순창읍 경천로 33입니다. 구조요청합니다." class="button sms">
+    <a href="sms:119?body=[순창군 순창읍 경천로 33]입니다. 구조를 요청합니다." class="button sms">
       💬 문자 보내기 (119)
     </a>
+    <p class="warning">
+      ※ <strong>119긴급신고의 관리 및 운영에 관한 법률 제27조(과태료)</strong><br>
+      위급사항을 거짓으로 신고한 자에게는 <strong>500만원 이하의 과태료</strong>를 부과합니다.
+    </p>
   </div>
 </body>
 </html>
